--- a/index.html
+++ b/index.html
@@ -1,47 +1,41 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SALUD INTERIOR</title>
+  <title>Mi Página Web</title>
   <style>
-    /* Estilos para el encabezado y la barra de navegación */
+    
+    /* Estilos CSS para dar formato a la página */
+    body {
+      background-color: #00aeff57; /* Cambia el color de fondo aquí */
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 75px;
+    }
     header {
-      background-color: #1d5bdf;
-      color: #001242;
-      padding: 20px;
+      background-color: #5E17EB;
+      color: #94B9FF;
+      padding: 50px;
       text-align: center;
     }
-
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
+    h1 {
+      margin: 20;
     }
-
-    nav li {
-      display: inline;
-    }
-
-    nav a {
-      color: #95e7f1;
-      text-decoration: none;
-      margin: 0 10px;
-    }
-
-    /* Estilos para las secciones */
     section {
-      margin-bottom: 30px;
+      margin-bottom: 40px;
+      background-color: #6EC3D9;
+      padding: 75px;
+      border-radius: 5px;
+      
     }
-
-    section h2 {
-      color: #1d5bdf;
+    h2 {
+      color: #333;
     }
-
-    /* Estilos para el pie de página */
+    p {
+      line-height: 1.6;
+    }
     footer {
-      background-color: #1d5bdf;
-      color: #04eafa;
+      background-color: #A2E4F5;
+      color: #000000;
       padding: 20px;
       text-align: center;
     }
@@ -49,36 +43,35 @@
 </head>
 <body>
   <header>
-    <h1>Mente Saludable</h1>
-    <nav>
-      <ul>
-        <li><a href="#">Bienvenido</a></li>
-        <li><a href="#">Ayudandote</a></li>
-        <li><a href="#">Cerca de ti</a></li>
-        <li><a href="#">Contactanos</a></li>
-      </ul>
-    </nav>
+    <img src="C:\Users\afjaimes\Downloads\perfil para la web.png" alt="Descripción de la imagen" width="20%" height="20%" style="border-radius: 50%;">
+    <h1>¿Necesitas ayuda profesional?</h1>
   </header>
+  <img src="C:\Users\afjaimes\Downloads\Página Web Banner.png" alt="Logo de la página">
+  <section>
+    <h2>Sobre mí</h2>
+    <p>¡Hola! Soy Andres Salazar, un psicólogo apasionado por ayudar a las personas a mejorar su bienestar emocional y mental. Me especializo en el manejo de la ansiedad, la depresión y el estrés, y estoy aquí para brindarte el apoyo necesario en tu camino hacia una vida más equilibrada y satisfactoria. Con un enfoque personalizado y basado en la evidencia, te proporcionaré herramientas efectivas para superar los desafíos emocionales y lograr un crecimiento personal significativo. Si estás listo/a para comenzar esta transformación, ¡no dudes en contactarme!</p>
+  </section>
 
-  <main>
-    <section>
-      <h2>El primer paso es buscar ayuda</h2>
-      <p>Aquí puedes proporcionar información sobre los servicios que ofreces como psicólogo.</p>
-    </section>
+  <section>
+    <h3>Especialidades</h3>
+    <ul>
+      <li>Terapia individual</li>
+      <li>Terapia de pareja</li>
+      <li>Terapia familiar</li>
+      <li>Manejo de la ansiedad</li>
+      <li>Depresión y estrés</li>
+    </ul>
+  </section>
 
-    <section>
-      <h2>¿Cómo podemos ayudarte?</h2>
-      <p>En esta sección puedes hablar sobre tu experiencia, formación y enfoque como psicólogo.</p>
-    </section>
-
-    <section>
-      <h2>Un nuevo inicio</h2>
-      <p>Puedes incluir un formulario de contacto o tus datos de contacto aquí.</p>
-    </section>
-  </main>
-
+  <section>
+    <h2>Métodos de terapia</h2>
+    <p>Utilizo una combinación de enfoques terapéuticos, incluyendo la terapia cognitivo-conductual, la terapia centrada en soluciones y la terapia de aceptación y compromiso. Estos enfoques me permiten adaptar el tratamiento a tus necesidades individuales y brindarte herramientas prácticas para superar los desafíos emocionales.</p>
+  </section>
+    <h1>Estamos para atenderte inmediatamente</h1>
+    <img src="C:\Users\afjaimes\Downloads\llamada-telefonica.png" alt="Descripción de la imagen" width="10%" height="10%" style="border-radius: 50%;"><p>01800-999-09</p>
+    <img src="C:\Users\afjaimes\Downloads\whatsapp.png" alt="Descripción de la imagen" width="10%" height="10%" style="border-radius: 50%;"><p>(+57) 311 633 0149 </p>
   <footer>
-    <p>Derechos de autor &copy; 2023 | Nombre de tu página</p>
+    <p>&copy; 2023 PSICOLOGIA PARA LA VIDA. Todos los derechos reservados.</p>
   </footer>
 </body>
 </html>
